--- a/src/app/pages/components/products-header/products-header.component.html
+++ b/src/app/pages/components/products-header/products-header.component.html
@@ -1,3 +1,13 @@
 <mat-card class="mb-4">
-
+<div class="flex justify-between">
+<div>
+    <button mat-button [matMenuTriggerFor]="sortByMenu">  
+Sort by desc    
+</button>
+<mat-menu  #sortByMenu="matMenu">
+<button mat-menu-item>Desc</button>
+<button mat-menu-item>Asc</button>
+</mat-menu>
+</div>
+</div>
 </mat-card>
