--- a/src/app/pages/components/products-header/products-header.component.html
+++ b/src/app/pages/components/products-header/products-header.component.html
@@ -1,13 +1,26 @@
 <mat-card class="mb-4">
-<div class="flex justify-between">
-<div>
-    <button mat-button [matMenuTriggerFor]="sortByMenu">  
-Sort by desc    
-</button>
-<mat-menu  #sortByMenu="matMenu">
-<button mat-menu-item>Desc</button>
-<button mat-menu-item>Asc</button>
-</mat-menu>
+    <div class="flex justify-between">
+        <div>
+            <button mat-button [matMenuTriggerFor]="sortByMenu">  
+                Sort by {{ sort }}    
+            </button>
+            <mat-menu #sortByMenu="matMenu">
+                <button (click)="onSortUpdated('desc')" mat-menu-item>Desc</button>
+            <button (click)="onSortUpdated('asc')" mat-menu-item>Asc</button>
+        </mat-menu>
+</div>
+
+<div class="flex items-center">
+    <div>
+        <button mat-button [matMenuTriggerFor]="menu">
+            Show {{ itemsShowCount }}
+            <mat-icon>expand_more</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+
+        </mat-menu>
+    </div>
 </div>
 </div>
+
 </mat-card>
