--- a/src/app/pages/components/products-header/products-header.component.html
+++ b/src/app/pages/components/products-header/products-header.component.html
@@ -3,10 +3,12 @@
         <div>
             <button mat-button [matMenuTriggerFor]="sortByMenu">  
                 Sort by {{ sort }}    
+                <mat-icon>expand_more</mat-icon>
             </button>
+          
             <mat-menu #sortByMenu="matMenu">
                 <button (click)="onSortUpdated('desc')" mat-menu-item>Desc</button>
-            <button (click)="onSortUpdated('asc')" mat-menu-item>Asc</button>
+            <button (click)="onItemsUpdated(12)" mat-menu-item>Asc</button>
         </mat-menu>
 </div>
 
