--- a/src/app/pages/components/products-header/products-header.component.html
+++ b/src/app/pages/components/products-header/products-header.component.html
@@ -8,7 +8,8 @@
           
             <mat-menu #sortByMenu="matMenu">
                 <button (click)="onSortUpdated('desc')" mat-menu-item>Desc</button>
-            <button (click)="onItemsUpdated(12)" mat-menu-item>Asc</button>
+         
+
         </mat-menu>
 </div>
 
@@ -19,7 +20,9 @@
             <mat-icon>expand_more</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-
+            <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
+            <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
+            <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
         </mat-menu>
     </div>
 </div>
