--- a/src/app/pages/components/products-header/products-header.component.html
+++ b/src/app/pages/components/products-header/products-header.component.html
@@ -21,10 +21,19 @@
         </button>
         <mat-menu #menu="matMenu">
             <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
-            <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
-            <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
+            <button (click)="onItemsUpdated(24)" mat-menu-item>24</button>
+            <button (click)="onItemsUpdated(36)" mat-menu-item>36</button>
         </mat-menu>
     </div>
+    <button (click)="onColumnsUpdated(1)" >
+        <mat-icon>view_list</mat-icon>
+    </button>
+    <button>
+        <mat-icon>view_module</mat-icon>
+    </button>
+    <button>
+        <mat-icon>view_comfy</mat-icon>
+    </button>
 </div>
 </div>
 
