--- a/src/app/pages/home/components/filters/filters.component.html
+++ b/src/app/pages/home/components/filters/filters.component.html
@@ -7,7 +7,7 @@
 <mat-selection-list [multiple]="false" >
 
     <mat-list-option *ngFor="let category of categories" [value]="category">
-        <button>{{ category }}</button>
+        <button (click)="onShowCategory(category)">{{ category }}</button>
     </mat-list-option>
 
 </mat-selection-list>
