--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -45,8 +45,8 @@
 
                 <button 
                 routerLink="cart"
-                class="bg-green-600 text-white w-9 h-9">
-0                    <mat-icon>remove_shopping_cart</mat-icon>
+                class="bg-green-600 text-white rounded-full w-9 h-9">
+                    <mat-icon>shopping_cart</mat-icon>
                 </button>
 
             </div>
