--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,17 @@ class="min-h-full max-w-7xl mx-auto border-x"
 </mat-drawer>
 <mat-drawer-content class="p-6">
 <app-products-header (columnsCountChange)="onColumnsCountChange($event)"> </app-products-header>
-{{ category }}
+<mat-grid-list
+gutterSize="30"
+[cols]="cols"
+[rowHeight]="rowHeight"
+>
+
+<mat-grid-tile>
+    
+</mat-grid-tile>
+
+</mat-grid-list>
 </mat-drawer-content>
 
 </mat-drawer-container>
