--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,7 +15,7 @@ gutterSize="30"
 >
 
 <mat-grid-tile>
-    <app-product-box [fullWidthMode]="cols === 1" >
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
         
     </app-product-box>
 </mat-grid-tile>
