--- a/src/app/pages/home/components/product-box/product-box.component.html
+++ b/src/app/pages/home/components/product-box/product-box.component.html
@@ -1,10 +1,12 @@
 <mat-card [ngClass]="{'text-center': !fullWidthMode}">      
-<div>
+<div [ngClass]="{'flex': fullWidthMode}">
     <img class="mb-1 mx-auto h-[200px]"
     [ngClass]="{'h-200px': !fullWidthMode, 'h-[300px]': fullWidthMode}"
     src="https://via.placeholder.com/200"
     >
-    <div class="w-full">
+    <div class="w-full"
+    [ngClass]="{'px-8 flex flex-col justify-between': fullWidthMode}"
+    >
         <div>
             <h5>Shoes</h5>
             <p class="truncate hover:whitespace-normal">Sneackers</p>
