--- a/src/app/pages/home/components/product-box/product-box.component.html
+++ b/src/app/pages/home/components/product-box/product-box.component.html
@@ -10,7 +10,7 @@
         <div>
             <h5>Shoes</h5>
             <p class="truncate hover:whitespace-normal">Sneackers</p>
-            <p>Description</p>
+            <p *ngIf="fullWidthMode">Description</p>
         </div>
         <div class="flex justify-between">
             <span class="text-red-400">{{ '150' | currency }}</span>
