--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,31 @@ gutterSize="30"
 
 <mat-grid-tile>
     <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
-        
+    </app-product-box>
+</mat-grid-tile>
+
+<mat-grid-tile>
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
+    </app-product-box>
+</mat-grid-tile>
+
+<mat-grid-tile>
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
+    </app-product-box>
+</mat-grid-tile>
+
+<mat-grid-tile>
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
+    </app-product-box>
+</mat-grid-tile>
+
+<mat-grid-tile>
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
+    </app-product-box>
+</mat-grid-tile>
+
+<mat-grid-tile>
+    <app-product-box class="w-full" [fullWidthMode]="cols === 1" >
     </app-product-box>
 </mat-grid-tile>
 
