--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -17,7 +17,7 @@
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef >Name</th>
             <td mat-cell *matCellDef="let element">
-              <p class="truncaate max-w-xs">{{ element.name }}</p>
+              <span class="truncaate max-w-xs block">{{ element.name }}</span>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -25,7 +25,7 @@
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef >Price</th>
             <td mat-cell *matCellDef="let element">
-              <p>{{ element.prce | currency }}</p>
+              <span>{{ element.price | currency }}</span>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -33,7 +33,13 @@
         <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef >Quantity</th>    
             <td mat-cell *matCellDef="let element">
-              <p>{{ element.quantity }}</p>
+              <button mat-icon-button>
+                <mat-icon>remove</mat-icon>
+              </button>
+                <span>{{ element.quantity }}</span>
+                <button mat-icon-button>
+                    <mat-icon>add</mat-icon>
+                  </button>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container> 
@@ -41,7 +47,7 @@
         <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef >Total</th>    
             <td mat-cell *matCellDef="let element">
-              <p>{{ element.total }}</p>
+              <span>{{ element.quantity * element.price | currency }}</span>
             </td>
             <td mat-footer-cell *matFooterCellDef>
                 <span class="font-bold py-5 block">
@@ -57,12 +63,15 @@
                 </button>
             </th>    
             <td mat-cell *matCellDef="let element">
-              <p>{{ element.total }}</p>
+            <button mat-mini-fab color="warn" class="float-right">
+                <mat-icon>close</mat-icon>
+                </button>
+               
             </td>
             <td mat-footer-cell *matFooterCellDef>
-                <span class="font-bold py-5 block">
-                    {{ getTotal(cart.items) | currency }}
-                </span>              
+                <button mat-raised-button color="primary" class="float-right">
+                    Proceed To Checkout
+                </button> 
             </td>
         </ng-container>
 
