--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
     <a routerLink="home">App store</a>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon
-    [matBadge]="1"
+    [matBadge]="itemsQuantity"
+    [matBadgeHidden]="!itemsQuantity"
     matBadgeColor="warn"
     >
         shopping_cart</mat-icon>
@@ -10,31 +11,25 @@
     <mat-menu #menu="matMenu">
         <div class="p-3 divide-y divide-solid">
             <div class="pb-3 flex justify-between">
-                <span class="mr-16">1 Items</span>
+                <span class="mr-16">{{ itemsQuantity }} Items</span>
                 <a routerLink="cart">View Cart</a>
             </div>
-            <div class="py-3">
+            <div *ngIf="cart.items.length" class="py-3">
 
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency }}</span>
+                <div
+                *ngFor="let item of cart.items"
+                class="flex justify-between font-light mb-2">
+                    {{ item.name }} x {{ item.quantity }}
+                    <span class="font-bold">{{ item.price | currency }}</span>
                 </div>
 
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency }}</span>
-                </div>
-
-                <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
-                    <span class="font-bold">{{ '150' | currency }}</span>
-                </div>
+              
 
             </div>
 
             <div class="flex justify-between py-3 font-light">
                 Total:
-                <span class="font-bold">{{ 450 | currency }}</span>
+                <span class="font-bold">{{ getTotal(cart.items) | currency }}</span>
             </div>
 
             <div class="pt-3 flex justify-between">
