added mmore logic to cart

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,8 +33,9 @@
             </div>
 
             <div class="pt-3 flex justify-between">
-
-                <button class="bg-rose-600 text-white rounded-full w-9 h-9">
+                <button
+                (click)="onClearCart()"
+                class="bg-rose-600 text-white rounded-full w-9 h-9">
                     <mat-icon>remove_shopping_cart</mat-icon>
                 </button>
 
