--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,9 +14,10 @@ gutterSize="30"
 [rowHeight]="rowHeight"
 >
 
-<mat-grid-tile>
+<mat-grid-tile *ngFor="let product of products">
    
     <app-product-box
+    [product]="product"
     (addToCart)="onAddToCart($event)" 
     class="w-full"
       [fullWidthMode]="cols === 1" >
