--- a/src/app/pages/home/components/filters/filters.component.html
+++ b/src/app/pages/home/components/filters/filters.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel *ngIf="categories.length">
+<mat-expansion-panel *ngIf="categories">
 <mat-expansion-panel-header>
     <mat-panel-title>
         CATEGORIES
